# kakuro-game

./: Board.cpp  EmptyCell.h  Generator.cpp  InfoCell.h  InputCell.cpp  InputCell.h  LICENSE  README.md
boardGeneration/: Block.cpp  Block.h  Board.cpp  Board.h  CMakeLists.txt  EmptyCell.h  Generator.cpp  Generator.h  InfoCell.h  InputCell.cpp  InputCell.h  Solution.cpp  Solution.h  main.cpp
boardGenerationFirstTry/: Block.cpp  Block.h  Board.cpp  Board.h  CMakeLists.txt  EmptyCell.cpp  EmptyCell.h  Generator.cpp  Generator.h  InfoCell.cpp  InfoCell.h  InputCell.cpp  InputCell.h  main.cpp
kakuro/kakuro_game/: pubspec.yaml
kakuro/kakuro_game/ios/Runner.xcodeproj/: project.pbxproj
kakuro/kakuro_game/lib/providers/: field_notifier.dart
kakuro/kakuro_game/libs/: InfoCell.h  InputCell.h  kakuroApi.cpp
kakuro/kakuro_game/test/: widget_test.dart
kakuro/kakuro_game/web/: index.html
kakuro_game/: .gitignore  README.md  pubspec.yaml
kakuro_game/android/app/: build.gradle
kakuro_game/ios/Runner/: Info.plist
kakuro_game/ios/Runner.xcodeproj/: project.pbxproj
kakuro_game/lib/: main.dart
kakuro_game/lib/assets/: consts.dart
kakuro_game/lib/models/: options_icons.dart
kakuro_game/lib/models/app_properties/: app_properties.dart
kakuro_game/lib/models/field_settings/: field_settings.dart
kakuro_game/lib/providers/: field_controller.dart  field_notifier.dart  stopwatch_controller.dart  stopwatch_notifier.dart
kakuro_game/lib/providers/ffi_bridge/: ffi_bridge.dart
kakuro_game/lib/screens/: menu_screen.dart
kakuro_game/lib/screens/game_screen/: game_screen.dart
kakuro_game/lib/screens/menu_screen/: menu_screen.dart
kakuro_game/lib/utilities/dancing_links/: dancing_links.dart
kakuro_game/lib/utilities/field/: field.dart  generator.dart
kakuro_game/lib/widgets/field/: field_widget.dart
kakuro_game/lib/widgets/options_floating_button/: expanding_option_button.dart  option_button.dart  options_floating_button.dart
kakuro_game/libs/: Block.h  Board.h  CMakeLists.txt  EmptyCell.cpp  EmptyCell.h  Generator.cpp  Generator.h  InputCell.h  Solution.h  kakuroApi.cpp
kakuro_game/test/: widget_test.dart
kakuro_game/web/: manifest.json
(+36 files in other folders)
